# wellfeather

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  justfile
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
app/: Cargo.toml  build.rs
app/lang/en/LC_MESSAGES/: wellfeather.po
app/lang/ja/LC_MESSAGES/: wellfeather.po
app/locales/: en.yml  ja.yml
app/src/: main.rs
app/src/app/: command.rs  controller.rs  event.rs  locale.rs  localized_message.rs  mod.rs  session.rs
app/src/state/: connection_state.rs  mod.rs  query_state.rs  ui_state.rs
app/src/ui/: app.slint  globals.slint  mod.rs  tabs_state.rs  tests.rs  theme.slint
app/src/ui/components/: common.slint  completion_popup.slint  connection_form.slint  db_panel.slint  editor.slint  find_replace_bar.slint  menu_bar.slint  metadata_search.slint  result_table.slint  result_table_body.slint  result_table_header.slint  result_table_search.slint  result_table_toolbar.slint  sidebar.slint  snippet_bar.slint  snippet_edit_dialog.slint  snippet_list_dialog.slint  snippet_save_dialog.slint  status_bar.slint  tab_bar.slint  table_view.slint
app/src/ui/components/dialogs/: add_connection_dialog.slint  all_rows_dialog.slint  db_manager_dialog.slint  safe_dml_dialog.slint  test_result_dialog.slint
crates/wf-completion/: Cargo.toml  README.md
crates/wf-completion/src/: cache.rs  engine.rs  lib.rs  parser.rs  service.rs
crates/wf-config/: Cargo.toml  README.md
crates/wf-config/src/: crypto.rs  lib.rs  manager.rs  models.rs  repository.rs  snippet.rs
crates/wf-db/: Cargo.toml  README.md
crates/wf-db/src/: error.rs  lib.rs  models.rs  pool.rs  service.rs
crates/wf-db/src/drivers/: mod.rs  my.rs  pg.rs  sqlite.rs
crates/wf-history/: Cargo.toml  README.md
crates/wf-history/src/: find_history.rs  lib.rs  service.rs  session.rs
crates/wf-query/: Cargo.toml  README.md
crates/wf-query/src/: analyzer.rs  export.rs  formatter.rs  highlight.rs  lib.rs
docs/: architecture.md  keybindings.md  reference-patterns.md  specification.md
docs/roadmap/v0-1-0/: ROADMAP.md
docs/roadmap/v0-10-0/: ROADMAP.md
docs/roadmap/v0-11-0/: ROADMAP.md
docs/roadmap/v0-12-0/: ROADMAP.md
docs/roadmap/v0-13-0/: ROADMAP.md
docs/roadmap/v0-14-0/: ROADMAP.md
docs/roadmap/v0-15-0/: ROADMAP.md
docs/roadmap/v0-2-0/: ROADMAP.md
docs/roadmap/v0-3-0/: ROADMAP.md
docs/roadmap/v0-4-0/: ROADMAP.md
docs/roadmap/v0-5-0/: ROADMAP.md
docs/roadmap/v0-6-0/: ROADMAP.md
docs/roadmap/v0-7-0/: ROADMAP.md
docs/roadmap/v0-8-0/: ROADMAP.md
docs/roadmap/v0-9-0/: ROADMAP.md
docs/roadmap/v1-0-0/: ROADMAP.md
docs/roadmap/v1-1-0/: ROADMAP.md
docs/roadmap/v1-2-0/: ROADMAP.md
docs/roadmap/v1-3-0/: ROADMAP.md
docs/roadmap/v1-4-0/: ROADMAP.md
docs/roadmap/v2-0-0/: ROADMAP.md
docs/roadmap/v2-1-0/: ROADMAP.md
docs/rules/: code-guideline.md  perf.md  rust.md  slint.md  test.md
docs/specs/: animation.md  keybindings.md  specification.md
xtask/: Cargo.toml
xtask/src/: main.rs
