[workspace]
members = [
    "app",
    "crates/wf-db",
    "crates/wf-config",
    "crates/wf-query",
    "crates/wf-completion",
    "crates/wf-history",
    "xtask",
]
default-members = ["app"]
resolver = "2"

[workspace.package]
version = "0.7.0"
edition = "2024"
rust-version = "1.93.0"
description = "A lightweight, keyboard-centric SQL client built with Rust and Slint"
readme = "README.md"
keywords = ["sql", "database", "gui", "slint", "tui"]
categories = ["database", "gui"]
# license = ""
repository = "https://github.com/itsakeyfut/wellfeather"
authors = ["itsakeyfut"]

[workspace.dependencies]
tokio         = { version = "1.50.0", features = ["full"] }
tokio-util    = "0.7.18"
serde         = { version = "1.0.228", features = ["derive"] }
anyhow        = "1.0.102"
thiserror     = "2.0.18"
tracing       = "0.1.44"
sqlx          = { version = "0.8.6", features = ["postgres", "mysql", "sqlite", "runtime-tokio", "macros", "chrono", "uuid"] }
uuid          = { version = "1.23.0", features = ["v4"] }
chrono        = { version = "0.4.44", features = ["serde"] }

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
panic         = "abort"
