[package]
name = "wellfeather"
version = "0.1.0"
edition = "2024"

[dependencies]
slint              = "1.15.1"
wf-db              = { path = "../crates/wf-db" }
wf-config          = { path = "../crates/wf-config" }
wf-query           = { path = "../crates/wf-query" }
wf-completion      = { path = "../crates/wf-completion" }
wf-history         = { path = "../crates/wf-history" }
tokio              = { workspace = true }
tokio-util         = { workspace = true }
chrono             = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
arboard             = "3.6.1"
rfd                 = { version = "0.15", features = ["tokio"] }
uuid               = { workspace = true }

[dev-dependencies]
tempfile = "3.27.0"

[build-dependencies]
slint-build = "1.15.1"
