[package]
name = "wf-completion"
description = "SQL completion engine with metadata cache and debounce for wellfeather"
readme = "README.md"
categories = ["text-editors"]
keywords = ["sql", "completion", "autocomplete", "metadata"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
wf-db      = { path = "../wf-db" }
tokio      = { workspace = true }
tokio-util = { workspace = true }
sqlx       = { workspace = true }
serde      = { workspace = true }
serde_json = "1.0.149"
anyhow     = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }

[dev-dependencies]
tempfile = "3.27.0"
