[package]
name = "wf-db"
description = "Database connection pool and query execution for wellfeather (PostgreSQL, MySQL, SQLite)"
readme = "README.md"
categories = ["database"]
keywords = ["sql", "database", "postgresql", "mysql", "sqlite"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
authors.workspace    = true
license.workspace    = true

[dependencies]
sqlx      = { workspace = true }
tokio     = { workspace = true }
tokio-util = { workspace = true }
serde     = { workspace = true }
thiserror = { workspace = true }
uuid      = { workspace = true }
chrono    = { workspace = true }
anyhow    = { workspace = true }
tracing   = { workspace = true }
