[package]
name = "wf-query"
description = "SQL cursor analysis, formatter, and CSV/JSON export for wellfeather"
readme = "README.md"
categories = ["text-processing"]
keywords = ["sql", "formatter", "parser", "csv", "json"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde     = { workspace = true }
anyhow    = { workspace = true }
thiserror = { workspace = true }
sqlformat = "0.5.0"
csv       = "1.4.0"
